--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ bld/
 [Bb]in/
 [Oo]bj/
 
+
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
@@ -232,6 +233,21 @@ _Pvt_Extensions
 # FAKE - F# Make
 .fake/
 
-!Expat.lib
-!Expat.pdb
+
 !NihavGameEngine/external/*
+!NihavGameEngine/external/expat/*
+!NihavGameEngine/external/expat/lib/Win32/*
+!NihavGameEngine/external/expat/lib/Win32/Debug/*
+!NihavGameEngine/external/expat/lib/Win32/Release/*
+!NihavGameEngine/external/expat/lib/x64/*
+!NihavGameEngine/external/expat/lib/x64/Debug/*
+!NihavGameEngine/external/expat/lib/x64/Release/*
+
+!NihavGameEngine/external/glfw/*
+!NihavGameEngine/external/glfw/lib/*
+!NihavGameEngine/external/glfw/lib/Win32/*
+!NihavGameEngine/external/glfw/lib/Win32/Debug/*
+!NihavGameEngine/external/glfw/lib/Win32/Release/*
+!NihavGameEngine/external/glfw/lib/x64/*
+!NihavGameEngine/external/glfw/lib/x64/Debug/*
+!NihavGameEngine/external/glfw/lib/x64/Release/*
