--- a/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
+++ b/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
@@ -135,6 +135,12 @@
     <ClInclude Include="XmlParseHelperActionIf.h">
       <Filter>XmlParseHelpers</Filter>
     </ClInclude>
+    <ClInclude Include="ActionWhileLoop.h">
+      <Filter>Kernel\Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="XmlParseHelperActionWhile.h">
+      <Filter>XmlParseHelpers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
@@ -245,6 +251,12 @@
       <Filter>Kernel\Actions</Filter>
     </ClCompile>
     <ClCompile Include="XmlParseHelperActionIf.cpp">
+      <Filter>XmlParseHelpers</Filter>
+    </ClCompile>
+    <ClCompile Include="ActionWhileLoop.cpp">
+      <Filter>Kernel\Actions</Filter>
+    </ClCompile>
+    <ClCompile Include="XmlParseHelperActionWhile.cpp">
       <Filter>XmlParseHelpers</Filter>
     </ClCompile>
   </ItemGroup>
