Add sprite test

--- a/GeometryWars/source/UnitTest.Library.Desktop/UnitTest.Library.Desktop.vcxproj.filters
+++ b/GeometryWars/source/UnitTest.Library.Desktop/UnitTest.Library.Desktop.vcxproj.filters
@@ -62,6 +62,7 @@
       <Filter>TestHelpers</Filter>
     </ClCompile>
     <ClCompile Include="ReactionTest.cpp" />
+    <ClCompile Include="SpriteTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
