--- a/GeometryWars/source/UnitTest.Library.Desktop/UnitTest.Library.Desktop.vcxproj
+++ b/GeometryWars/source/UnitTest.Library.Desktop/UnitTest.Library.Desktop.vcxproj
@@ -267,6 +267,7 @@
     <ClCompile Include="ReactionTest.cpp" />
     <ClCompile Include="ScopeTest.cpp" />
     <ClCompile Include="SListTest.cpp" />
+    <ClCompile Include="SpriteTest.cpp" />
     <ClCompile Include="StackTest.cpp" />
     <ClCompile Include="TestSharedData.cpp" />
     <ClCompile Include="VectorTest.cpp" />
